# jemalloc

./: CMakeLists.txt  configure.ac
pregen-arm64ec/include/jemalloc/: jemalloc.h  jemalloc_rename.h
pregen-arm64ec/include/jemalloc/internal/: jemalloc_internal_defs.h  private_symbols_jet.awk
pregen-win32/include/jemalloc/: jemalloc_mangle.h  jemalloc_mangle_jet.h
pregen-win32/include/jemalloc/internal/: jemalloc_internal_defs.h  private_symbols.awk  public_namespace.h
pregen/include/jemalloc/: jemalloc.h  jemalloc_defs.h  jemalloc_macros.h  jemalloc_mangle.h  jemalloc_mangle_jet.h  jemalloc_rename.h
pregen/include/jemalloc/internal/: jemalloc_internal_defs.h  private_namespace.h  private_symbols.awk  private_symbols_jet.awk  public_namespace.h  public_symbols.txt  public_unnamespace.h
src/: arena.c  base.c  emap.c  jemalloc.c  pages.c
